# fundamental_algs

./: .clang-format  .gitignore
.cache/clangd/index/: employee.c.74590A3654AEDDB0.idx  employee.h.45FF99DA5EA71F60.idx  task3.c.C849081154F8E778.idx  util_task3.c.510E0EA8DF8FD58B.idx  (+1 more)
1_sem/lab1/: task3.rar
1_sem/lab1/task2/: pi.c  (+8 more)
1_sem/lab2/task3/: CMakeLists.txt  task3.c  test1  test1.txt  test2  test2.txt  test3  test3.txt  util3.c  util3.h
1_sem/lab4/task1/: CMakeLists.txt  hash_table.c  hash_table.h  task1.c  util_task1.c
1_sem/lab5/task4/: CMakeLists.txt  task4.cpp
1_sem/tests/: a.out  t.cpp  test2.cpp
lab1/task1/: task1.c  util_task1.c  util_task1.h
lab1/task10/: CMakeLists.txt  task10.c  util_task10.c
lab1/task2/: CMakeLists.txt  dichotomy_equation.c  dichotomy_equation.h  e.c  gamma.c  sqrt2.c  task2.c  util_task2.c  util_task2.h
lab1/task3/: CMakeLists.txt  handlers.c  handlers.h  task3.c  util_task3.c  util_task3.h
lab1/task4/: CMakeLists.txt  task4.c  util_task4.c  util_task4.h
lab2/task1/: task1.c
lab2/task2/: task2.c
lab2/task7/: task7.c  util_task7.c
lab2/task9/: task9.c  util_task9.c  util_task9.h
lab3/task1/: CMakeLists.txt  util_task1.c
lab3/task10/: CMakeLists.txt  tree.c  util_task10.c  util_task10.h
lab3/task3/: CMakeLists.txt  employee.c  task3.c  util_task3.c  util_task3.h
lab3/task5/: CMakeLists.txt  api.c  api.h  student.c  student.h
lab4/task1/: test_file  util_task1.h
lab5/task1/: task1.cpp  util_task1.cpp  util_task1.hpp
lab5/task2/: CMakeLists.txt  examp.txt
lab5/task3/: CMakeLists.txt  util_task3.cpp  util_task3.hpp
lab5/task4/: util_task4.cpp  util_task4.hpp
lab5/task5/: CMakeLists.txt  task5.cpp  util_task5.cpp
lab5/task6/: CMakeLists.txt  task6.cpp  util_task6.cpp  util_task6.hpp
lab5/task7/: CMakeLists.txt  util_task7.cpp
(+104 files in other folders)
